--- a/virtual Pet/virtualPet.html
+++ b/virtual Pet/virtualPet.html
@@ -24,7 +24,7 @@
         </div>
 
         <div id="pet-container">
-            <img id="pet-image" src="img/virtualpet_happy.png" alt="Virtual Pet">
+            <img id="pet-image" src="img/virtualpet_bored.png" alt="Virtual Pet">
         </div>
 
         <div id="displaystate">
