--- a/virtual Pet/virtualPet.html
+++ b/virtual Pet/virtualPet.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="title">My Virtual Pet</h1>
-    <div id="name">
+    <div id="name">+
         <input type="text" id="pet-name" placeholder="Give me a name">
         <button id="submit-name" onclick="givePetName()">
             <img src="icon/play.svg" alt="Submit" id="submit-icon">
